# SemanticModelDataMapper

./: API_VERIFICATION_COMPLETE.md  COMPREHENSIVE_EVALUATION.md  INTEGRATION_SUCCESS.md  PROXY_FIX_FINAL.md  QUICK_REFERENCE.md  WEB_UI_QUICKSTART.md  docker-compose.yml  pyproject.toml  start-web-ui.sh  test_integration.sh  test_output.yaml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py  worker.py
backend/app/routers/: __init__.py  conversion.py  mappings.py  projects.py  websockets.py
backend/app/schemas/: project.py
backend/app/services/: rdfmap_service.py
examples/demo/: README.md  run_demo.py  test_demo.py
examples/demo/alignment_reports/: alignment_report_1.json
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/public/: test.html
frontend/src/: App.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: ProjectDetail.tsx  ProjectList.tsx
frontend/src/services/: api.ts  index.ts
src/rdfmap/analyzer/: alignment_stats.py
src/rdfmap/cli/: main.py
src/rdfmap/generator/: mapping_generator.py  ontology_analyzer.py  ontology_enricher.py
src/rdfmap/generator/matchers/: __init__.py  base.py  factory.py  semantic_matcher.py
src/rdfmap/models/: alignment.py  enrichment.py
src/rdfmap/validator/: skos_coverage.py
tests/: test_generator_workflow.py
