[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdfmap"
version = "0.1.0"
description = "Convert spreadsheet data to RDF triples aligned with ontologies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Enterprise Data Engineering", email = "your-email@example.com"}
]
keywords = ["rdf", "ontology", "semantic-web", "knowledge-graph", "owl", "shacl", "linked-data", "data-conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rdflib>=7.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyshacl>=0.25.0",
    "typer>=0.9.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/your-username/SemanticModelDataMapper"
Documentation = "https://github.com/your-username/SemanticModelDataMapper#readme"
Repository = "https://github.com/your-username/SemanticModelDataMapper"
Issues = "https://github.com/your-username/SemanticModelDataMapper/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.8.19",
    "pandas-stubs>=2.1.1",
]

[project.scripts]
rdfmap = "rdfmap.cli.main:app"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=rdfmap --cov-report=term-missing"
